Fixed misspelling and broken phone image on mobile.

--- a/css/master.css
+++ b/css/master.css
@@ -316,6 +316,7 @@ a.light:hover{
   right: 10%;
   width:100%;
   max-width: 38.6rem;
+  padding-top: 4.8rem;
 
 }
 
